fixed left align bullets

--- a/src/stylesheets/projects.css
+++ b/src/stylesheets/projects.css
@@ -36,6 +36,10 @@
     margin-top: 4px;
 }
 
+.li-style {
+    text-align: left;
+}
+
 a.projects-links:link {
     color: blue;
     text-decoration: none;
